reviews/html reviews/css

--- a/index.html
+++ b/index.html
@@ -248,6 +248,70 @@
             </div>
         </div>
     </section>
+
+    <section class="reviews">
+        <div class="container">
+            <h2 class="text-h2 reviews__h2">отзывы о работе с нами</h2>
+            <div class="reviews__grid">
+                <div class="reviews__grid-item">
+                    <div class="reviews__card">
+                        <div class="reviews__quotes">“</div>
+                        <p class="text-p-reviews">Lorem Ipsum&nbsp;&mdash; это текст-&laquo;рыба&raquo;, часто
+                            используемый в&nbsp;печати и&nbsp;вэб-дизайне. Lorem Ipsum является стандартной
+                            &laquo;рыбой&raquo; для текстов на&nbsp;латинице с&nbsp;начала XVI века.
+                            В&nbsp;то&nbsp;время некий безымянный печатник создал большую коллекцию размеров и&nbsp;форм
+                            шрифтов.
+                        </p>
+                    </div>
+                    <div class="text-h4">Иванов Иван,<span class="reviews__author-accent"> ООО “Газпром-Арена”</span>
+                    </div>
+                </div>
+                <div class="reviews__grid-item">
+                    <div class="reviews__card">
+                        <div class="reviews__quotes">“</div>
+                        <p class="text-p-reviews">Lorem Ipsum&nbsp;&mdash; это текст-&laquo;рыба&raquo;, часто
+                            используемый в&nbsp;печати и&nbsp;вэб-дизайне. Lorem Ipsum является стандартной
+                            &laquo;рыбой&raquo; для текстов на&nbsp;латинице с&nbsp;начала XVI века.
+                            В&nbsp;то&nbsp;время некий безымянный печатник создал большую коллекцию размеров и&nbsp;форм
+                            шрифтов.
+                        </p>
+                    </div>
+                    <div class="text-h4">Иванов Иван,<span class="reviews__author-accent"> ООО “Газпром-Арена”</span>
+                    </div>
+                </div>
+                <div class="reviews__grid-item">
+                    <div class="reviews__card">
+                        <div class="reviews__quotes">“</div>
+                        <p class="text-p-reviews">Lorem Ipsum&nbsp;&mdash; это текст-&laquo;рыба&raquo;, часто
+                            используемый в&nbsp;печати и&nbsp;вэб-дизайне. Lorem Ipsum является стандартной
+                            &laquo;рыбой&raquo; для текстов на&nbsp;латинице с&nbsp;начала XVI века.
+                            В&nbsp;то&nbsp;время некий безымянный печатник создал большую коллекцию размеров и&nbsp;форм
+                            шрифтов.
+                        </p>
+                    </div>
+                    <div class="text-h4">Иванов Иван,<span class="reviews__author-accent"> ООО “Газпром-Арена”</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="request">
+        <div class="container">
+            <div class="request__flex">
+                <div class="request__flex-left">
+                    <h4 class="request__h4">ХОТИТЕ С НАМИ РАБОТАТЬ?</h4>
+                    <h5 class="request__h5">ОСТАВЬТЕ ЗАЯВКУ И МЫ СВЯЖЕМСЯ С ВАМИ!</h5>
+                </div>
+                <div class="request__flex-right">
+                    <button class="request__btn">
+                        <img src="/img/invelope.svg" alt="invelope" class="request__icon">
+                        ВАШ ЗАПРОС
+                    </button>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
