css/style.css   index.html

--- a/index.html
+++ b/index.html
@@ -312,6 +312,46 @@
             </div>
         </div>
     </section>
+
+    <section class="contacts">
+        <div class="container">
+            <h2 class="h2 contacts__h2">КОНТАКТЫ</h2>
+            <div class="contacts__grid">
+                <div class="contacts__item">
+                    <img class="contacts__icon" src="/img/maps.svg" alt="location">
+                    <h3 class="text-h3 contacts__h3 contacts-gray">АДРЕС:</h3>
+                    <h3 class="text-h3 contacts__h3">НЕВСКИЙ ПРОСПЕКТ 140,<br>
+                        ОФИС 140-142</h3>
+                </div>
+                <div class="contacts__item">
+                    <img class="contacts__icon" src="/img/phone.svg" alt="phone number">
+                    <h3 class="text-h3 contacts__h3 contacts-gray">ТЕЛЕФОН:</h3>
+                    <h3 class="text-h3 contacts__h3">8 (812) 111-22-33
+                        8 (812) 111-22-33</h3>
+                </div>
+                <div class="contacts__item">
+                    <img class="contacts__icon" src="/img/clock.svg" alt="clock">
+                    <h3 class="text-h3 contacts__h3 contacts-gray">ВРЕМЯ РАБОТЫ:</h3>
+                    <h3 class="text-h3 contacts__h3">ПН-СБ
+                        10:00 - 20:00</h3>
+                </div>
+                <div class="contacts__item">
+                    <img class="contacts__icon" src="/img/email.svg" alt="email">
+                    <h3 class="text-h3 contacts__h3 contacts-gray">E-MAIL:</h3>
+                    <h3 class="text-h3 contacts__h3 contacts__h3-accent">INFO@VIP.RU</h3>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer class="footer">
+        <div class="container">
+            <div class="footer__flex">
+                <p class="text-p footer__copyright"> &copy;2019 Строительная компания</p>
+                <p class="text-p footer__brand">Разработано лучшей студей</p>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
