--- a/index.html
+++ b/index.html
@@ -186,44 +186,44 @@
     <section class="question">
         <div class="container">
             <h2 class="text-h2 section__h2">Ответы на вопросы</h2>
-            <div class="question__items">
-                <div class="question__item">
-                    <h3 class="text-h3 question__h3 close">РАБОТАЕТЕ ЛИ ВЫ ПО 249 ФЗ?</h3>
+            <details class="question__items">
+                <details class="question__item">
+                    <summary class="text-h3 question__h3">РАБОТАЕТЕ ЛИ ВЫ ПО 249 ФЗ?</summary>
                     <p class="text-p question__p">Lorem Ipsum&nbsp;&mdash; это текст-&laquo;рыба&raquo;, часто
                         используемый в&nbsp;печати и&nbsp;вэб-дизайне. Lorem Ipsum является стандартной
                         &laquo;рыбой&raquo; для текстов на&nbsp;латинице с&nbsp;начала XVI века. В&nbsp;то&nbsp;время
                         некий безымянный печатник создал большую коллекцию размеров и&nbsp;форм шрифтов, используя Lorem
                         Ipsum для распечатки образцов.
                     </p>
-                </div>
-                <div class="question__item">
-                    <h3 class="text-h3 question__h3 open">РАБОТАЕТЕ ЛИ ВЫ ПО 249 ФЗ?</h3>
+                </details>
+                <details class="question__item">
+                    <summary class="text-h3 question__h3">РАБОТАЕТЕ ЛИ ВЫ ПО 249 ФЗ?</summary>
                     <p class="text-p question__p">Lorem Ipsum&nbsp;&mdash; это текст-&laquo;рыба&raquo;, часто
                         используемый в&nbsp;печати и&nbsp;вэб-дизайне. Lorem Ipsum является стандартной
                         &laquo;рыбой&raquo; для текстов на&nbsp;латинице с&nbsp;начала XVI века. В&nbsp;то&nbsp;время
                         некий безымянный печатник создал большую коллекцию размеров и&nbsp;форм шрифтов, используя Lorem
                         Ipsum для распечатки образцов.
                     </p>
-                </div>
-                <div class="question__item">
-                    <h3 class="text-h3 question__h3 close">РАБОТАЕТЕ ЛИ ВЫ ПО 249 ФЗ?</h3>
+                </details>
+                <details class="question__item">
+                    <summary class="text-h3 question__h3">РАБОТАЕТЕ ЛИ ВЫ ПО 249 ФЗ?</summary>
                     <p class="text-p question__p">Lorem Ipsum&nbsp;&mdash; это текст-&laquo;рыба&raquo;, часто
                         используемый в&nbsp;печати и&nbsp;вэб-дизайне. Lorem Ipsum является стандартной
                         &laquo;рыбой&raquo; для текстов на&nbsp;латинице с&nbsp;начала XVI века. В&nbsp;то&nbsp;время
                         некий безымянный печатник создал большую коллекцию размеров и&nbsp;форм шрифтов, используя Lorem
                         Ipsum для распечатки образцов.
                     </p>
-                </div>
-                <div class="question__item">
-                    <h3 class="text-h3 question__h3 close">РАБОТАЕТЕ ЛИ ВЫ ПО 249 ФЗ?</h3>
+                </details>
+                <details class="question__item">
+                    <summary class="text-h3 question__h3">РАБОТАЕТЕ ЛИ ВЫ ПО 249 ФЗ?</summary>
                     <p class="text-p question__p">Lorem Ipsum&nbsp;&mdash; это текст-&laquo;рыба&raquo;, часто
                         используемый в&nbsp;печати и&nbsp;вэб-дизайне. Lorem Ipsum является стандартной
                         &laquo;рыбой&raquo; для текстов на&nbsp;латинице с&nbsp;начала XVI века. В&nbsp;то&nbsp;время
                         некий безымянный печатник создал большую коллекцию размеров и&nbsp;форм шрифтов, используя Lorem
                         Ipsum для распечатки образцов.
                     </p>
-                </div>
-            </div>
+                </details>
+            </details>
         </div>
     </section>
 
@@ -327,8 +327,11 @@
                 <div class="contacts__item">
                     <img class="contacts__icon" src="/img/phone.svg" alt="phone number">
                     <h3 class="text-h3 contacts__h3 contacts-gray">ТЕЛЕФОН:</h3>
-                    <h3 class="text-h3 contacts__h3">8 (812) 111-22-33
-                        8 (812) 111-22-33</h3>
+                    <h3 class="text-h3 contacts__h3">
+                        <a href="tel:+78121112233">8 (812) 111-22-33</a>
+                        <br>
+                        <a href="tel:+78121112233">8 (812) 111-22-33</a>
+                    </h3>
                 </div>
                 <div class="contacts__item">
                     <img class="contacts__icon" src="/img/clock.svg" alt="clock">
@@ -339,7 +342,7 @@
                 <div class="contacts__item">
                     <img class="contacts__icon" src="/img/email.svg" alt="email">
                     <h3 class="text-h3 contacts__h3 contacts-gray">E-MAIL:</h3>
-                    <h3 class="text-h3 contacts__h3 contacts__h3-accent">INFO@VIP.RU</h3>
+                    <h3 class="text-h3 contacts__h3 contacts__h3-accent"><a href="mailto:info@vip.ru">info@vip.ru</a></h3>
                 </div>
             </div>
         </div>
