--- a/index.html
+++ b/index.html
@@ -183,25 +183,25 @@
     <section class="portfolio">
         <div class="portfolio__grid">
             <div class="portfolio__grid-item">
-                <img src="/img/portfolio-item.jpg" alt="portfolio item" class="portfolio__img">
+                <img src="/img/portfolio-item.jpg" alt="portfolio item" class="portfolio__img materialboxed">
             </div>
             <div class="portfolio__grid-item">
-                <img src="/img/portfolio-item.jpg" alt="portfolio item" class="portfolio__img">
+                <img src="/img/portfolio-item.jpg" alt="portfolio item" class="portfolio__img materialboxed">
             </div>
             <div class="portfolio__grid-item">
-                <img src="/img/portfolio-item.jpg" alt="portfolio item" class="portfolio__img">
+                <img src="/img/portfolio-item.jpg" alt="portfolio item" class="portfolio__img materialboxed">
             </div>
             <div class="portfolio__grid-item">
-                <img src="/img/portfolio-item.jpg" alt="portfolio item" class="portfolio__img">
+                <img src="/img/portfolio-item.jpg" alt="portfolio item" class="portfolio__img materialboxed">
             </div>
             <div class="portfolio__grid-item">
-                <img src="/img/portfolio-item.jpg" alt="portfolio item" class="portfolio__img">
+                <img src="/img/portfolio-item.jpg" alt="portfolio item" class="portfolio__img materialboxed">
             </div>
             <div class="portfolio__grid-item">
-                <img src="/img/portfolio-item.jpg" alt="portfolio item" class="portfolio__img">
+                <img src="/img/portfolio-item.jpg" alt="portfolio item" class="portfolio__img materialboxed">
             </div>
             <div class="portfolio__grid-item">
-                <img src="/img/portfolio-item.jpg" alt="portfolio item" class="portfolio__img">
+                <img src="/img/portfolio-item.jpg" alt="portfolio item" class="portfolio__img materialboxed">
             </div>
             <div class="portfolio__grid-item">
                 <img src="/img/portfolio-item.jpg" alt="portfolio item" class="portfolio__img">
