modified:   index.html

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     <!-- <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Modal</a> -->
 
     <!-- Modal Structure -->
-    <div id="modal1" class="modal">
+    <!-- <div id="modal1" class="modal">
         <div class="modal-content">
             <h4>Заголовок окна</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic harum et nemo ut temporibus dolor cum fuga,
@@ -123,7 +123,7 @@
         <!-- <div class="modal-footer"> -->
         <!-- <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>  -->
         <!-- </div> -->
-    </div>
+    <!-- </div>  -->
 
     <section class="request">
         <div class="container">
