--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- <link type="text/css" rel="stylesheet" href="css/materialize.css" media="screen,projection" /> -->
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Test site</title>
 </head>
 
@@ -30,7 +30,7 @@
     <header class="header">
         <div class="container">
             <div class="header__title">
-                <img src="/img/logo.svg" alt="logo" class="logo">
+                <img src="./img/logo.svg" alt="logo" class="logo">
                 <a href="#!" data-target="slide-out" class="burger sidenav-trigger">
                     <span class="burger__line"></span>
                     <span class="burger__line"></span>
@@ -73,7 +73,7 @@
             <h2 class="text-h2 project-h2">НАШИ САМЫЕ БОЛЬШИЕ ПРОЕКТЫ</h2>
             <div class="about__flex">
                 <div class="about__flex-item">
-                    <img class="project-img" src="/img/project.jpg" alt="">
+                    <img class="project-img" src="./img/project.jpg" alt="">
                     <div class="rectangle"></div>
                     <h3 class="text-h3 project-h3">Газпром Арена</h3>
                     <div class="text-p project-p">Мы&nbsp;сделали самую красивую арену в&nbsp;Европе. Это открытие стало
@@ -82,7 +82,7 @@
                     </div>
                 </div>
                 <div class="about__flex-item">
-                    <img class="project-img" src="/img/project.jpg" alt="">
+                    <img class="project-img" src="./img/project.jpg" alt="">
                     <div class="rectangle"></div>
                     <h3 class="text-h3 project-h3">Газпром Арена</h3>
                     <div class="text-p project-p">Мы&nbsp;сделали самую красивую арену в&nbsp;Европе. Это открытие стало
@@ -91,7 +91,7 @@
                     </div>
                 </div>
                 <div class="about__flex-item">
-                    <img class="project-img" src="/img/project.jpg" alt="">
+                    <img class="project-img" src="./img/project.jpg" alt="">
                     <div class="rectangle"></div>
                     <h3 class="text-h3 project-h3">Газпром Арена</h3>
                     <div class="text-p project-p">Мы&nbsp;сделали самую красивую арену в&nbsp;Европе. Это открытие стало
@@ -134,7 +134,7 @@
                 </div>
                 <div class="request__flex-right">
                     <a class="request__btn modal-trigger" href="#modal1">
-                        <img src="/img/invelope.svg" alt="invelope" class="request__icon">
+                        <img src="./img/invelope.svg" alt="invelope" class="request__icon">
                         ВАШ ЗАПРОС
                     </a>
                 </div>
@@ -147,32 +147,32 @@
             <h2 class="text-h2 section__h2">Чем мы занимаемся?</h2>
             <div class="services__grid">
                 <div class="services__grid-item">
-                    <img src="/img/services.svg" alt="services icon" class="services__icon">
+                    <img src="./img/services.svg" alt="services icon" class="services__icon">
                     <h4 class="text-h4 services__h4">СТРОИТЕЛЬСТВО
                         ОФИСНЫХ ЗДАНИЙ</h4>
                 </div>
                 <div class="services__grid-item">
-                    <img src="/img/services.svg" alt="services icon" class="services__icon">
+                    <img src="./img/services.svg" alt="services icon" class="services__icon">
                     <h4 class="text-h4 services__h4">СТРОИТЕЛЬСТВО
                         ОФИСНЫХ ЗДАНИЙ</h4>
                 </div>
                 <div class="services__grid-item">
-                    <img src="/img/services.svg" alt="services icon" class="services__icon">
+                    <img src="./img/services.svg" alt="services icon" class="services__icon">
                     <h4 class="text-h4 services__h4">СТРОИТЕЛЬСТВО
                         ОФИСНЫХ ЗДАНИЙ</h4>
                 </div>
                 <div class="services__grid-item">
-                    <img src="/img/services.svg" alt="services icon" class="services__icon">
+                    <img src="./img/services.svg" alt="services icon" class="services__icon">
                     <h4 class="text-h4 services__h4">СТРОИТЕЛЬСТВО
                         ОФИСНЫХ ЗДАНИЙ</h4>
                 </div>
                 <div class="services__grid-item">
-                    <img src="/img/services.svg" alt="services icon" class="services__icon">
+                    <img src="./img/services.svg" alt="services icon" class="services__icon">
                     <h4 class="text-h4 services__h4">СТРОИТЕЛЬСТВО
                         ОФИСНЫХ ЗДАНИЙ</h4>
                 </div>
                 <div class="services__grid-item">
-                    <img src="/img/services.svg" alt="services icon" class="services__icon">
+                    <img src="./img/services.svg" alt="services icon" class="services__icon">
                     <h4 class="text-h4 services__h4">СТРОИТЕЛЬСТВО
                         ОФИСНЫХ ЗДАНИЙ</h4>
                 </div>
@@ -183,28 +183,28 @@
     <section class="portfolio">
         <div class="portfolio__grid">
             <div class="portfolio__grid-item">
-                <img src="/img/portfolio-item.jpg" alt="portfolio item" class="portfolio__img materialboxed">
+                <img src="./img/portfolio-item.jpg" alt="portfolio item" class="portfolio__img materialboxed">
             </div>
             <div class="portfolio__grid-item">
-                <img src="/img/portfolio-item.jpg" alt="portfolio item" class="portfolio__img materialboxed">
+                <img src="./img/portfolio-item.jpg" alt="portfolio item" class="portfolio__img materialboxed">
             </div>
             <div class="portfolio__grid-item">
-                <img src="/img/portfolio-item.jpg" alt="portfolio item" class="portfolio__img materialboxed">
+                <img src="./img/portfolio-item.jpg" alt="portfolio item" class="portfolio__img materialboxed">
             </div>
             <div class="portfolio__grid-item">
-                <img src="/img/portfolio-item.jpg" alt="portfolio item" class="portfolio__img materialboxed">
+                <img src="./img/portfolio-item.jpg" alt="portfolio item" class="portfolio__img materialboxed">
             </div>
             <div class="portfolio__grid-item">
-                <img src="/img/portfolio-item.jpg" alt="portfolio item" class="portfolio__img materialboxed">
+                <img src="./img/portfolio-item.jpg" alt="portfolio item" class="portfolio__img materialboxed">
             </div>
             <div class="portfolio__grid-item">
-                <img src="/img/portfolio-item.jpg" alt="portfolio item" class="portfolio__img materialboxed">
+                <img src="./img/portfolio-item.jpg" alt="portfolio item" class="portfolio__img materialboxed">
             </div>
             <div class="portfolio__grid-item">
-                <img src="/img/portfolio-item.jpg" alt="portfolio item" class="portfolio__img materialboxed">
+                <img src="./img/portfolio-item.jpg" alt="portfolio item" class="portfolio__img materialboxed">
             </div>
             <div class="portfolio__grid-item">
-                <img src="/img/portfolio-item.jpg" alt="portfolio item" class="portfolio__img">
+                <img src="./img/portfolio-item.jpg" alt="portfolio item" class="portfolio__img">
             </div>
         </div>
     </section>
@@ -258,19 +258,19 @@
             <h2 class="h2 partners__h2">Наши партнеры</h2>
             <div class="partners__flex">
                 <div class="partners__item">
-                    <img src="/img/partners.png" alt="">
+                    <img src="./img/partners.png" alt="">
                 </div>
                 <div class="partners__item">
-                    <img src="/img/partners.png" alt="">
+                    <img src="./img/partners.png" alt="">
                 </div>
                 <div class="partners__item">
-                    <img src="/img/partners.png" alt="">
+                    <img src="./img/partners.png" alt="">
                 </div>
                 <div class="partners__item">
-                    <img src="/img/partners.png" alt="">
+                    <img src="./img/partners.png" alt="">
                 </div>
                 <div class="partners__item">
-                    <img src="/img/partners.png" alt="">
+                    <img src="./img/partners.png" alt="">
                 </div>
             </div>
         </div>
@@ -340,7 +340,7 @@
                 <div class="request__flex-right">
                     <!-- <button class="request__btn"> -->
                     <a class="request__btn modal-trigger" href="#modal2">
-                        <img src="/img/invelope.svg" alt="invelope" class="request__icon">
+                        <img src="./img/invelope.svg" alt="invelope" class="request__icon">
                         ВАШ ЗАПРОС
                     </a>
                     <!-- <img src="/img/invelope.svg" alt="invelope" class="request__icon">
@@ -356,13 +356,13 @@
             <h2 class="h2 contacts__h2">КОНТАКТЫ</h2>
             <div class="contacts__grid">
                 <div class="contacts__item">
-                    <img class="contacts__icon" src="/img/maps.svg" alt="location">
+                    <img class="contacts__icon" src="./img/maps.svg" alt="location">
                     <h3 class="text-h3 contacts__h3 contacts-gray">АДРЕС:</h3>
                     <h3 class="text-h3 contacts__h3">НЕВСКИЙ ПРОСПЕКТ 140,<br>
                         ОФИС 140-142</h3>
                 </div>
                 <div class="contacts__item">
-                    <img class="contacts__icon" src="/img/phone.svg" alt="phone number">
+                    <img class="contacts__icon" src="./img/phone.svg" alt="phone number">
                     <h3 class="text-h3 contacts__h3 contacts-gray">ТЕЛЕФОН:</h3>
                     <h3 class="text-h3 contacts__h3">
                         <a href="tel:+78121112233">8 (812) 111-22-33</a>
@@ -371,13 +371,13 @@
                     </h3>
                 </div>
                 <div class="contacts__item">
-                    <img class="contacts__icon" src="/img/clock.svg" alt="clock">
+                    <img class="contacts__icon" src="./img/clock.svg" alt="clock">
                     <h3 class="text-h3 contacts__h3 contacts-gray">ВРЕМЯ РАБОТЫ:</h3>
                     <h3 class="text-h3 contacts__h3">ПН-СБ
                         10:00 - 20:00</h3>
                 </div>
                 <div class="contacts__item">
-                    <img class="contacts__icon" src="/img/email.svg" alt="email">
+                    <img class="contacts__icon" src="./img/email.svg" alt="email">
                     <h3 class="text-h3 contacts__h3 contacts-gray">E-MAIL:</h3>
                     <h3 class="text-h3 contacts__h3 contacts__h3-accent"><a href="mailto:info@vip.ru">info@vip.ru</a>
                     </h3>
@@ -394,8 +394,8 @@
             </div>
         </div>
     </footer>
-    <script type="text/javascript" src="js/main.js"></script>
-    <script type="text/javascript" src="js/materialize.min.js"></script>
+    <script type="text/javascript" src="./js/main.js"></script>
+    <script type="text/javascript" src="./js/materialize.min.js"></script>
 
 </body>
 
